# Retailers-RN-Brazil

./: carnestotais_att.csv  pyproject.toml
entrada/: 20240615_carnestotais_att.csv  24SEE250GC_SIR.dbf  24SEE250GC_SIR.shx  LATLONG.csv  latlong.xlsx  rendasetor.csv  rendasetor.xlsx
saida/: 20240615_carnestotais_att_nonans.csv
