[tool.poetry]
name = "retailers-rn-brazil"
version = "0.1.0"
description = ""
authors = ["Elias Jacob <elias.jacob@ufrn.br>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
geopandas = "^1.0.1"
matplotlib = "^3.9.3"
statsmodels = "^0.14.4"
plotly = "^5.24.1"
plotly-express = "^0.4.1"
numpy = "^2.1.3"
scipy = "^1.14.1"
seaborn = "^0.13.2"
kaleido = "0.2.1"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
